// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-0"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-1"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value="foo"
    />
    
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      onClick={[Function]}
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      clear
    </span>
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="input-2"
  >
    Text label
  </label>
  
  <div
    className="c2"
  >
    <input
      id="input-2"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 0 0;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  color: #e91b0c;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-3"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      error
    </span>
    
  </div>
  
  <span
    className="c3"
  >
    Error message
  </span>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-4"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={true}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  pointer-events: none;
  left: 16px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      search
    </span>
    <input
      id="input-5"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      disabled={true}
      id="input-6"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 0 0;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-7"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  <span
    className="c2"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <input
      id="input-8"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  pointer-events: none;
  left: 16px;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3"
      description="this is a description label"
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      search
    </span>
    <input
      id="input-9"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-10"
      mask={[Function]}
      onChange={[Function]}
      placeholder="this input has a placeholder"
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-11"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 13`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-12"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 14`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-13"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 15`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-14"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 16`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-15"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 17`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-16"
      mask={[Function]}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="password"
      value=""
    />
    
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      onClick={[Function]}
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      visibility
    </span>
    
  </div>
  
  
</div>
`;
